syntax = "proto3";

package fileserver;

option go_package = "github.com/AlexandrKobalt/trip-track/backend/proto/fileserver";

service File {
    rpc Upload(UploadRequest) returns (UploadResponse);
    rpc GetURL(GetURLRequest) returns (GetURLResponse);
}

message UploadRequest {
    bytes file = 1;
}

message UploadResponse {
    string key = 1;
}

message GetURLRequest {
    string key = 1;
}

message GetURLResponse {
    string url = 1;
}